src/examples/success/blocks.c
int i = 20;
bool check = true;

if (check) {
    int i = 10;

}

return i;
