src/examples/fail/internal_return.c
if (true) {
  char a = 'a';
}

return a;    //Error: a has been declared in an inner block
